--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <section>
     <br>   
     <div class="box_foto1">
-        <img src="Imagenes\5003-big.jpg"  alt="Ilustracion Botanica">  
+        <img src="5003-big.jpg"  alt="Ilustracion Botanica">  
         <br>
         <p>Ilustraciones en Acrilico.    Autor: Lucila Domínguez</p>     
     </div>
