--- a/Nosotros.html
+++ b/Nosotros.html
@@ -36,9 +36,9 @@
     <aside>
         <div class="Audio-Video"></div>
             <audio controls autoplay loop> 
-            <source src="Imagenes\Friends.ogg" type="audio/ogg"></audio>
+            <source src="Friends.ogg" type="audio/ogg"></audio>
             <br><br>
-            <video src="Imagenes\video.mp4" cotrols width = "300" controls autoplay> </video>
+            <video src="video.mp4" cotrols width = "300" controls autoplay> </video>
             <br>
         </div>
     </aside>         
