--- a/Cursos.html
+++ b/Cursos.html
@@ -19,11 +19,11 @@
     
     <div class="box-Cursos">
     <h4>Ilustración en Acuarela</h4> 
-        <img src="Imagenes\14422-big.jpg" width="500px"  alt="Imagen1">
+        <img src="14422-big.jpg" width="500px"  alt="Imagen1">
     <h4>Ilustración en Acrilico</h4>
-        <img src="Imagenes\Monoblock-01_850.jpg" width="500px" alt="Acrilico">
+        <img src="Monoblock-01_850.jpg" width="500px" alt="Acrilico">
     <h4>Ilustración digital</h4>
-        <img src="Imagenes\17271-big (1).png" width="500px" alt="Retrato ilustrado">
+        <img src="17271-big (1).png" width="500px" alt="Retrato ilustrado">
     </div>
     <div class="box-Tcursos">
         <br><br>
