--- a/Comunidad.html
+++ b/Comunidad.html
@@ -18,10 +18,10 @@
         <div class="glide">
             <div class="glide__track" data-glide-el="track">
               <ul class="glide__slides">
-                <li class="glide__slide"><img src="Imagenes\chang-duong-KrfID_ZQxWs-unsplash.jpg"  width="415" alt="Abrazo"> </li>
-                <li class="glide__slide"> <img src="Imagenes\clay-banks-LjqARJaJotc-unsplash.jpg" width="400" alt="Manos"></li>
-                <li class="glide__slide"><img src="Imagenes\duy-pham-Cecb0_8Hx-o-unsplash.jpg" width="400" alt="Salto"> </li>
-                <li class="glide__slide"> <img src="Imagenes\markus-winkler-L91XxIUUGU4-unsplash.jpg" width="400"  alt="Coworking"></li>
+                <li class="glide__slide"><img src="chang-duong-KrfID_ZQxWs-unsplash.jpg"  width="415" alt="Abrazo"> </li>
+                <li class="glide__slide"> <img src="clay-banks-LjqARJaJotc-unsplash.jpg" width="400" alt="Manos"></li>
+                <li class="glide__slide"><img src="duy-pham-Cecb0_8Hx-o-unsplash.jpg" width="400" alt="Salto"> </li>
+                <li class="glide__slide"> <img src="markus-winkler-L91XxIUUGU4-unsplash.jpg" width="400"  alt="Coworking"></li>
               </ul>
             </div>
             <div class="glide__arrows" data-glide-el="controls">
